keys are in two seperate files